feat: navbar e telas principais com api

--- a/src/paginas/gestao/style.css
+++ b/src/paginas/gestao/style.css
@@ -1,15 +1,12 @@
-.gestao-container {
-    padding: 20px;
+#gestao-body {
+    display: flex;
 }
 
 .switch-container {
     display: flex;
-    margin-bottom: 20px;
 }
 
 .switch-item {
-    padding: 10px 20px;
-    margin-right: 10px;
     cursor: pointer;
 }
 
