--- a/src/style/global.css
+++ b/src/style/global.css
@@ -17,6 +17,68 @@
 	--vermelho-hover: #cf3434;
 }
 
-#global-display {
+.global-display {
 	display: flex;
+}
+
+.global-btn {
+	border-radius: 5px;
+	padding: 1%;
+	width: 24%;
+	margin-right: 4%;
+}
+
+.global-btn:hover {
+	cursor: pointer;
+}
+
+.global-btn-verde {
+	background-color: var(--verde);
+	border: 1px solid var(--azul-borda);
+}
+
+.global-btn-verde:hover {
+	background-color: var(--verde-hover);
+}
+
+.global-btn-azul {
+	background-color: var(--azul-borda);
+	border: 1px solid var(--preto);
+	color: var(--branco);
+}
+
+.global-btn-azul:hover {
+	background-color: var(--azul-borda-hover);
+}
+
+.global-tabela {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 3%;
+}
+
+.global-titulo-tabela,
+.global-conteudo-tabela {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid var(--cinza);
+}
+
+.global-container {
+    margin: 2% 4% 0 0;
+    width: 75%;
+}
+
+.global-input {
+    border-radius: 5px;
+    border: 1px solid var(--cinza);
+    padding: 1%;
+    width: 36%;
+    margin-right: 4%;
+}
+
+.global-subtitulo {
+    border-bottom: 1px solid var(--cinza);
+    margin-bottom: 3%;
+    padding-bottom: 2.5%;
 }
