--- a/src/style/global.css
+++ b/src/style/global.css
@@ -15,6 +15,7 @@
 	--verde-hover: #73972f;
 	--azul-borda-hover: #2d5472;
 	--vermelho-hover: #cf3434;
+	--branco-hover: #d4d4d4;
 }
 
 .global-display {
