--- a/src/paginas/login/style.css
+++ b/src/paginas/login/style.css
@@ -1,6 +1,7 @@
 #login-container {
   min-height: 100vh;
   background-color: var(--preto);
+  padding-bottom: 3%;
 }
 
 .login-container {
@@ -8,7 +9,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 3%;
 }
 
 .logo {
