--- a/src/componetes/pop-up/style.css
+++ b/src/componetes/pop-up/style.css
@@ -13,32 +13,52 @@
 
 .popup {
   background-color: white;
-  padding: 20px;
+  width: 35%;
+  padding: 1.25rem;
   border-radius: 10px;
   text-align: center;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--preto);
 }
 
-.popup-buttons {
+.popup-botoes {
   display: flex;
   justify-content: space-around;
-  margin-top: 20px;
+  border-top: 1px solid var(--cinza);
+  margin-top: 1rem;
+  padding: 1rem 0 0.5rem 0;
 }
 
-.confirm-button,
-.cancel-button {
-  padding: 10px 20px;
-  border: none;
+#popup-titulo {
+  margin-bottom: 1rem;
+  padding: 1rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border-bottom: 1px solid var(--cinza);
+}
+
+.popup-botao {
   border-radius: 5px;
+  padding: 2%;
+  margin-right: 4%;
+  width: 45%;
+  font-size: 0.9rem;
   cursor: pointer;
 }
 
-.confirm-button {
-  background-color: #28a745;
-  color: white;
+#popup-botao-cancelar {
+  background-color: var(--vermelho);
+  border: 1px solid var(--azul-borda);
 }
 
-.cancel-button {
-  background-color: #dc3545;
-  color: white;
+#popup-botao-cancelar:hover {
+  background-color: var(--vermelho-hover);
+}
+
+#popup-botao-confirmar {
+  background-color: var(--verde);
+  border: 1px solid var(--azul-borda);
+}
+
+#popup-botao-confirmar:hover {
+  background-color: var(--verde-hover);
 }
