feat: controle alteracoes

--- a/src/componetes/card-contato/style.css
+++ b/src/componetes/card-contato/style.css
@@ -29,6 +29,13 @@
     cursor: pointer;
 }
 
+.card-cliente-contatos-btn.disabled,
+.card-cliente-contatos-btn.disabled:hover {
+    cursor: not-allowed;
+    background-color: #ccc;
+    color: #666;
+}
+
 .card-cliente-contatos-btn:hover {
     background-color: var(--preto-hover);
 }
