--- a/src/componetes/pop-up-filtro/style.css
+++ b/src/componetes/pop-up-filtro/style.css
@@ -1,23 +1,31 @@
 /* FilterContracts.css */
 
+#filter-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
 .filter-form {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 30%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 2%;
   background-color: #f9f9f9;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.form-group {
-  margin-bottom: 15px;
-}
-
 .form-group label {
   display: block;
-  margin-bottom: 5px;
   font-weight: bold;
 }
 
@@ -29,8 +37,7 @@
 }
 
 .filter-button {
-  padding: 10px 15px;
-  background-color: #007bff;
+  padding: 3%;
   color: white;
   border: none;
   border-radius: 4px;
@@ -38,6 +45,19 @@
   font-size: 16px;
 }
 
-.filter-button:hover {
-  background-color: #0056b3;
+#filter-apply-button {
+  background-color: var(--azul-borda);
+  margin-bottom: 3%;
+}
+
+#filter-apply-button:hover {
+  background-color: var(--azul-borda-hover);
+}
+
+#filter-close-button {
+  background-color: var(--vermelho);
+}
+
+#filter-close-button:hover {
+  background-color: var(--vermelho-hover);
 }
