--- a/src/paginas/login/style.css
+++ b/src/paginas/login/style.css
@@ -65,4 +65,9 @@
   border-radius: 7px;
   background-color: var(--verde);
   padding: 5%;
+  cursor: pointer;
+}
+
+#login-button:hover {
+  background-color: var(--verde-hover);
 }
