--- a/src/paginas/cliente/style.css
+++ b/src/paginas/cliente/style.css
@@ -65,7 +65,7 @@
 }
 
 #cliente-tabela th {
-  background-color: var(--azul-borda);
+  background-color: var(--preto);
   color: var(--branco);
 }
 
