--- a/src/paginas/form-faturado/style.css
+++ b/src/paginas/form-faturado/style.css
@@ -1,82 +1,82 @@
-#cadastro-segmento-descricao {
+#cadastro-faturado-descricao {
   margin-top: 1rem;
   padding-bottom: 1.5rem;
   color: var(--cinza);
   border-bottom: 1px solid var(--cinza);
 }
 
-#cadastro-segmento-form-container {
+#cadastro-faturado-form-container {
   margin-top: 2rem;
   display: flex;
 }
 
-#cadastro-segmento-form {
+#cadastro-faturado-form {
   display: flex;
   flex-direction: column;
   width: 200%;
   justify-content: space-between;
 }
 
-#cadastro-segmento-input-labels {
+#cadastro-faturado-input-labels {
   display: flex;
   flex-direction: column;
 }
 
-.cadastro-segmento-input {
+.cadastro-faturado-input {
   padding: 2%;
   margin: 1rem 0 1.5rem 0;
   border: 1px solid var(--cinza);
 }
 
-#cadastro-segmento-input {
+#cadastro-faturado-input {
   border-radius: 5px;
 }
 
-#cadastro-segmento-select {
+#cadastro-faturado-select {
   background-color: var(--branco);
 }
 
-.cadastro-segmento-container-btn {
+.cadastro-faturado-container-btn {
   width: 100%;
   display: flex;
   justify-content: center;
   gap: 6%;
 }
 
-#cadastro-segmento-container-img {
+#cadastro-faturado-container-img {
   display: flex;
   align-items: center;
   height: 70vh;
   justify-content: end;
 }
 
-#cadastro-segmento-img {
+#cadastro-faturado-img {
   width: 65%;
 }
 
-.cadastro-segmento-btn {
+.cadastro-faturado-btn {
   width: 50%;
   padding: 2% 3%;
   border: 1px solid var(--preto);
   border-radius: 5px;
 }
 
-.cadastro-segmento-btn:hover {
+.cadastro-faturado-btn:hover {
   cursor: pointer;
 }
 
-#cadastro-segmento-btn-cancelar {
+#cadastro-faturado-btn-cancelar {
   background-color: var(--branco);
 }
 
-#cadastro-segmento-btn-cancelar:hover {
+#cadastro-faturado-btn-cancelar:hover {
   background-color: var(--branco-hover);
 }
 
-#cadastro-segmento-btn-cadastrar {
+#cadastro-faturado-btn-cadastrar {
   background-color: var(--verde);
 }
 
-#cadastro-segmento-btn-cadastrar:hover {
+#cadastro-faturado-btn-cadastrar:hover {
   background-color: var(--verde-hover);
 }
