feat: Adicionar botões de inativar e ativar clientes
Adiciona os botões de inativar e ativar clientes na página de detalhes do cliente. Os botões permitem que o usuário inative ou ative um cliente, exibindo um pop-up de confirmação antes de realizar a ação. Além disso, adiciona a funcionalidade de exibir um pop-up com informações adicionais ao clicar em um contrato na tabela de contratos do cliente.

Co-authored-by: GabrielDietze <gabrieldietze@example.com>

--- a/src/paginas/cliente/style.css
+++ b/src/paginas/cliente/style.css
@@ -27,6 +27,11 @@
   text-transform: capitalize;
 }
 
+#cliente-btn-div {
+  display: flex;
+  gap: 8%;
+}
+
 #cliente-botao-editar {
   border: 1px solid var(--preto);
   height: 30px;
@@ -36,8 +41,40 @@
   background-color: var(--verde);
 }
 
+#cliente-botao-inativar {
+  border: 1px solid var(--preto);
+  height: 30px;
+  width: 60px;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: var(--vermelho);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cliente-botao-ativar {
+  border: 1px solid var(--preto);
+  height: 30px;
+  width: 60px;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: var(--verde);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cliente-botao-ativar:hover {
+  background-color: var(--verde-hover);
+}
+
 #cliente-botao-editar:hover {
   background-color: var(--verde-hover);
+}
+
+#cliente-botao-inativar:hover {
+  background-color: var(--vermelho-hover);
 }
 
 #cliente-botao-editar.disabled {
@@ -95,6 +132,10 @@
 .cliente-contatos-container {
   display: flex;
   justify-content: space-between;
+}
+
+.inactive-contract {
+  background-color: var(--cinza);
 }
 
 #cliente-contatos-container-img {
