--- a/src/paginas/form-contrato/style.css
+++ b/src/paginas/form-contrato/style.css
@@ -20,8 +20,22 @@
   font-size: 0.9rem;
 }
 
+#btn-ativar-contrato {
+  background-color: var(--verde);
+  color: var(--preto);
+  padding: 1%;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9rem;
+  border: 1px solid var(--azul);
+}
+
 #btn-inativar-contrato:hover {
   background-color: var(--vermelho-hover);
+}
+
+#btn-ativar-contrato:hover {
+  background-color: var(--verde-hover);
 }
 
 #form-contrato-container {
